- new coreas read in function to generate signals for a grid of stations
- added simulation of galactic noise
- new phased array trigger module
- eventWriter: Add option to specify number of events per file

bug fixes:
- Added if check in voltageToEfieldConverter.py under method get_array_of_channels() to see if sim station is initialized
- trigger modules set the trigger time to 0 in case not trigger was recorded. This lead to problems, and wrong total trigger times, if multiple triggers were recorded. Now, no trigger time is set if not trigger was found. 

version 1.1.2 -

new features:
- Added the ability to force polarization to be only eTheta or ePhi in the reconstruction of the electric field using voltageToEfieldConverter.py
- new detector which allows to change certain parameters of the detector description to study systematic uncertainties.
- Simulations with alias (higher Nyquist zones) for the phased array now supported
- NuRadioRecoIO has a 100MB read buffer by default
- Changed detector description to optionally take antenna model name directly from detector description (without automatically selecting antenna model dependent on depth of the antenna)
- NuRadioReco now fails if no antenna pattern was found

bug fixes:
-Removed function "get_relative_positions(self, station_id)" from detector.py because the ordering of channels is different from a sql initiated detector compared to a json initiated detector. Must use "get_relative_position(self, station_id, channel_id)", which specifies which channel to get the position for.


version 1.1.1 - 2020/03/23

new features:
- changed the way logging is handled.
- RNO-G hardware response added


version 1.1.0 - 2020/01/15

new features:
- added module registry. By adding a decorator to the run methods of every module, we keep track of the modules applied to an event
-Added new module called "beamFormingDirectionFitter" that fits direction through an interferometry method (dubbed beamForming)